--- a/assets/styles/composition/_grid.scss
+++ b/assets/styles/composition/_grid.scss
@@ -58,6 +58,10 @@
 }
 
 @media screen and (min-width: 1366px) {
+    .grid {
+        grid-gap: var(--space-64);
+    }
+    
     .grid--one-column {
         grid-template-columns: 1fr;
     }
